Event deletion aborts unfinished previous delete attempt
Affected version
- Fedora Workstation 37 pre-Beta
- gnome-calendar-43~beta-1
Bug summary
The application cannot properly delete events, if more events are deleted consequently without waiting for GUI widgets to show the change. When I delete an event, a confirmation bar appears at the bottom with an option to undo. When that bar is waited out, then the event disappears from the main view and after a short while also from the month view in the top left corner and also from the weekly overview below.
When more events are deleted in a row (one does not wait until the confirmation bars disappears), the events disappear from the main view but they stay in the month view and week view which is easy to oversee. After the application is restarted, the events are shown again as valid events.
I will try to provide some screenshots or videos later, however the Screencast does not work the best on Wayland and screenshots itself are not illustrative enough.
Steps to reproduce
- Add a couple of events.
- Delete several of them without waiting for the confirmation bar.
- See that the month view still has little dots, even if the events have disappeared from the main view.
- See that, when you click on those dots, you can see the event listed below in the week view.
- Restart the application and see that the events are back as if never deleted.
- I ended up with several events that I cannot delete at all nor I can edit them.
What happened
The events were not deleted.
What did you expect to happen
The events should have been deleted.
Relevant logs, screenshots, screencasts etc.
In the attached file, there are messages from journalctl -b | grep calendar
.